asterix-app/src/main/resources/webui/static/css/style.css
body {
    background: none repeat scroll 0 0 white;
    color: black;
    font-family: 'Bitter';
    font-size: 14px;
    line-height: 17px;
    width: 100%;
}

.content {
    margin-top: 36px;
}

label.query, label.result {
    font-size: 24px;
    padding-bottom: 10px;
    font-weight: bold;
    color : #17265a;
}

div.host {
    float: left;
    margin: 0 100px 0 10px;
}

div.port {
}

div.left {
    float: left;
    width: 320px;
    padding: 0 20px 0 10px;
}

div.right {
}

#run-btn {
}

#select-toggle-holder {
    border: 1px black;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

textarea.query {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 16px;
    line-height: 20px;
    font-family: bitter, helvetica;
    width: 100%;
    padding: 10px;
    color: #333;
    resize: none;
    border: 10px solid #eee;
}

label {
    padding-top: 10px;
}

#opts {
    margin-right: 4px;
}

input[type=text] {
    height: 20px;
}

pre {
    overflow: auto;
    white-space: pre;
}

div.output label.heading {
    font-size: 24px;
    margin-top: 2px;
    padding-bottom: 10px;
    font-weight: bold;
    color : #17265a;
}

div.output h4 {
    color : #17265a;
}

a.accordion-toggle {
    color : #17265a;
}

div.output .message {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    color: #000;
    resize: none;
}

div.output .message pre.error {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    border-color: rgba(82, 168, 236, 0.8);
    outline: 0;
    outline: thin dotted 9;

    -webkit-box-shadow: inset 0 1px 1px rgba(250, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.8);
    -moz-box-shadow: inset 0 1px 1px rgba(250, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 1.0);
    box-shadow: inset 0 1px 1px rgba(250, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 1.0);
    color: #000;
    resize: none;
    border: 1px solid #eee;
    margin-top: 7px;
    padding: 20px 20px 20px 20px;
}

.footer {
   margin-top: 40px;
}

.footer .line {
    border-top: 1px solid #EEEEEE;
    bottom: 20px;
    height: 10px;
    left: 0;
    position: fixed;
    width: 100%;
}

.footer .content {
    background: none repeat scroll 0 0 #FFFFFF;
    bottom: 0;
    color: #666666;
    font-size: 12px;
    height: 25px;
    left: 0;
    padding-top: 5px;
    position: fixed;
    width: 100%;
}

.footer .content .left {
    padding-left: 20px;
    float: left;
}

.footer .content .right {
    padding-right: 20px;
    float: right;
}

.navbar .brand {
    width: 160px;
    height: 40px;
    overflow: visible;
    padding-top: 0;
    padding-bottom: 0;
}

/*.navbar .nav > li > a {
    color: #17265a;
}*/

.extarget {
    margin-left: 4px;
    padding-bottom: 2px;
}

.btn-custom-darken.active {
  color: rgba(255, 255, 255, 0.75);
}
.btn-custom-darken {
  color: #ffffff;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  background-color: #233887;
  background-image: -moz-linear-gradient(top, #273f97, #1d2e6e);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#273f97), to(#1d2e6e));
  background-image: -webkit-linear-gradient(top, #273f97, #1d2e6e);
  background-image: -o-linear-gradient(top, #273f97, #1d2e6e);
  background-image: linear-gradient(to bottom, #273f97, #1d2e6e);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff273f97', endColorstr='#ff1d2e6e', GradientType=0);
  border-color: #1d2e6e #1d2e6e #0d1532;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  *background-color: #1d2e6e;
  /* Darken IE7 buttons by default so they stand out more given they won't have borders */

  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
}
.btn-custom-darken:hover,
.btn-custom-darken:focus,
.btn-custom-darken:active,
.btn-custom-darken.active,
.btn-custom-darken.disabled,
.btn-custom-darken[disabled] {
  color: #ffffff;
  background-color: #1d2e6e;
  *background-color: #17265a;
}
.btn-custom-darken:active,
.btn-custom-darken.active {
  background-color: #121d46 ;
}

.span6 {
    padding: 24px;
}

